increased zoom for searched locations

--- a/changed/templates/changed/home.html
+++ b/changed/templates/changed/home.html
@@ -241,6 +241,7 @@
                         }
                         });
                         map.fitBounds(bounds);
+                        map.setZoom(20);
                         });
             }
             function isIconMouseEvent(e) {
