Fixed issues with the date and outdoor_dining

--- a/changed/templates/changed/comments.html
+++ b/changed/templates/changed/comments.html
@@ -34,7 +34,7 @@
                             &#10007;
                             {% endif %},
                             outdoor dining:
-                            {%if comment.indoor_dining == True %}
+                            {%if comment.outdoor_dining == True %}
                             &#10003;
                             {% else %}
                             &#10007;
