--- a/changed/templates/changed/replies.html
+++ b/changed/templates/changed/replies.html
@@ -25,7 +25,7 @@
                                     &#10007;
                                     {% endif %},
                                     outdoor dining:
-                                    {%if comment.indoor_dining == True %}
+                                    {%if comment.outdoor_dining == True %}
                                     &#10003;
                                     {% else %}
                                     &#10007;
