--- a/changed/templates/changed/signup.html
+++ b/changed/templates/changed/signup.html
@@ -1,5 +1,6 @@
 ﻿{% extends 'changed/base_html.html' %}
 {% block content %}
+
 <head>
     <title>Sign Up</title>
     <!-- Required meta tags -->
@@ -7,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
 
@@ -20,41 +21,44 @@
                 </div>
                 <!-- The signup page will send the POST request to a helper URL called register
                 Register will create a new user and log in to the home page-->
-                <form action="{% url 'changed:register'%}" , method="POST" class="text-center"
-                      style="margin-top:15px; margin-bottom: 15px;">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for=" username">Username:</label>
-                        <input type="text" , id="username" , name="username">
-                    </div>
-                    <div class="form-group" style="margin-top:1vh; margin-bottom:1vh;">
-                        <label for="password">Password:</label>
-                        <input type="text" , id="password" , name="password">
-                    </div>
-                    <div>
-                        <button type="submit" value="Signup" class="btn"
+                <div class="card-body text-center">
+                    <small> Your username and password cannot be changed once created.</small>
+                    <form action="{% url 'changed:register'%}" , method="POST" class="text-center"
+                        style="margin-top:15px; margin-bottom: 15px;">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for=" username">Username:</label>
+                            <input type="text" , id="username" , name="username">
+                        </div>
+                        <div class="form-group" style="margin-top:1vh; margin-bottom:1vh;">
+                            <label for="password">Password:</label>
+                            <input type="text" , id="password" , name="password">
+                        </div>
+                        <div>
+                            <button type="submit" value="Signup" class="btn"
                                 style="background-color:rgb(151, 151, 151); color:white">
-                            Sign Up
-                        </button>
+                                Sign Up
+                            </button>
+                        </div>
+                    </form>
+                    <div class="text-center">
+                        <a href="{% url 'changed:index' %}" style="color:rgb(81, 133, 168)">
+                            Click here to go back to
+                            login
+                        </a>
                     </div>
-                </form>
-                <div class="text-center">
-                    <a href="{% url 'changed:index' %}" style="color:rgb(81, 133, 168)">
-                        Click here to go back to
-                        login
-                    </a>
                 </div>
                 <!-- Optional JavaScript -->
                 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
                 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-                        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-                        crossorigin="anonymous"></script>
+                    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+                    crossorigin="anonymous"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-                        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-                        crossorigin="anonymous"></script>
+                    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+                    crossorigin="anonymous"></script>
                 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-                        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-                        crossorigin="anonymous"></script>
+                    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+                    crossorigin="anonymous"></script>
             </div>
         </div>
     </div>
