Add references for Google Maps API

--- a/changed/templates/changed/home.html
+++ b/changed/templates/changed/home.html
@@ -4,9 +4,18 @@
 
 <head>
         <title>Home</title>
-        <!--Google Maps API: 
-        https://developers.google.com/maps/documentation/javascript/overview#maps_map_simple-html
-        https://developers.google.com/maps/documentation/javascript/examples/places-searchbox-->
+        <!--***************************************************************************************************************
+        * REFERENCE
+        * Title: Google Maps API: Simple Map
+        * URL: https://developers.google.com/maps/documentation/javascript/overview#maps_map_simple-html
+        * Software License: Apache 2.0 License
+        ***************************************************************************************************************/-->
+        <!--***************************************************************************************************************
+        * REFERENCE
+        * Title: Google Maps API: Places Searchbox
+        * URL:  https://developers.google.com/maps/documentation/javascript/examples/places-searchbox
+        * Software License: Apache 2.0 License
+        ***************************************************************************************************************/-->
 
         <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
         <style type="text/css">
