--- a/changed/templates/changed/about.html
+++ b/changed/templates/changed/about.html
@@ -1,7 +1,7 @@
 {% extends 'changed/base_html.html' %}
 
 {% block content %}
-<!--Content goes here-->
+<!--Content goes here--->
 
 <head>
     <title>About</title>
