--- a/changed/templates/changed/base_html.html
+++ b/changed/templates/changed/base_html.html
@@ -22,37 +22,42 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'changed:about' %}">About<span class="sr-only">(current)</span></a>
-                </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'changed:index' %}">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'changed:about' %}">About<span class="sr-only">(current)</span></a>
+                </li>
+                {% else %}
+                <li class="nav-item ">
+                    <a class="nav-link" href="{% url 'changed:index' %}">Login<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'changed:about' %}">About<span class="sr-only">(current)</span></a>
+                </li>
+                {% endif %}
+            </ul>
+            {% if user.is_authenticated %}
+            <!--
+              -- REFERENCE:
+              -- URL: https://www.codeply.com/go/qhaBrcWp3v
+              -- Bootstrap License: MIT
+              -->
+            <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'changed:profile' username=user.username %}">
+                        {{user.username}} <span class="sr-only">(current)</span>
+                    </a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="{% url 'changed:logout' %}">
                         Logout<span class="sr-only">(current)</span>
                     </a>
                 </li>
-                {% else %}
-                <li class="nav-item ">
-                    <a class="nav-link" href="{% url 'changed:index' %}">Login<span class="sr-only">(current)</span></a>
-                </li>
-                {% endif %}
             </ul>
+            {% endif %}
         </div>
-        {% if user.is_authenticated %}
-        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-            <ul class="navbar-nav ml-auto">
-                <div style="margin-right:5px">
-                    <a class="nav-link" href="{% url 'changed:profile' username=user.username %}">
-                        {{user.username}} <span class="sr-only">(current)</span>
-                    </a>
-                </div>
-            </ul>
-        </div>
-
-        {% endif %}
     </div>
 </nav>
 {% block content %}
