--- a/changed/templates/changed/home.html
+++ b/changed/templates/changed/home.html
@@ -11,7 +11,7 @@
         <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
         <style type="text/css">
                 /* Always set the map height explicitly to define the size of the div
-        * element that contains the map. */
+                   element that contains the map. */
                 #map {
                         height: 100%;
                 }
