Reformat navbar login/logout as buttons

--- a/changed/templates/changed/login.html
+++ b/changed/templates/changed/login.html
@@ -51,7 +51,7 @@
                         </a>
                     </div>
                     <br />
-                    <a href="{% url 'changed:signup' %}" style="color:rgb(81, 133, 168)">Click here to sign up</a>
+                    <a href="{% url 'changed:signup' %}">Click here to sign up</a>
                 </div>
             </div>
             {% for message in messages %}
