--- a/changed/templates/changed/profile.html
+++ b/changed/templates/changed/profile.html
@@ -19,7 +19,7 @@
                 <h4 class="card-header">{{review.business.business_name}}</h4>
                 <div class="card-body">
                     <p>COVID Compliance Rating: {{review.covid_compliance_rating}}/5</p>
-                    <p>
+                    <p style="color:#5d7fa3">
                         indoor dining:
                         {%if review.indoor_dining == True %}
                         &#10003;
@@ -32,8 +32,6 @@
                         {% else %}
                         &#10007;
                         {% endif %}
-                    </p>
-                    <p>
                         curbside pickup:
                         {%if review.curbside_pickup == True %}
                         &#10003;
@@ -47,11 +45,14 @@
                         &#10007;
                         {% endif %}
                     </p>
-                    <p>Capacity limit: {{review.capacity_limit}}</p>
-                    <p>Comment: {{review.body}}</p>
+                    <p style="color:#5d7fa3">capacity limit: {{review.capacity_limit}}</p>
+                    <hr>
+                    <p>{{review.body}}</p>
 
                     <div style="text-align: center;">
-                        <a href="{% url 'changed:delete_comment_prof' business_pid=review.business.business_pid comment_id=review.id %}" class="btn btn-info" role="button" style="background-color: #5d7fa3; color:white"> Delete</a>
+                        <a href="{% url 'changed:delete_comment_prof' business_pid=review.business.business_pid comment_id=review.id %}"
+                            class="btn btn-info" role="button" style="background-color: #5d7fa3; color:white">
+                            Delete</a>
                         <!--
                           -- REFERENCE
                           -- Title: Collapse
@@ -59,16 +60,16 @@
                           -- URL: https://getbootstrap.com/docs/4.0/components/collapse/
                           -- Bootstrap License: MIT
                         -->
-                        <a class="btn" data-toggle="collapse" href="#reviewform" role="button"
-                           aria-expanded="false" aria-controls="reviewform"
-                           style="background-color:#5d7fa3; color:white">
+                        <a class="btn" data-toggle="collapse" href="#reviewform" role="button" aria-expanded="false"
+                            aria-controls="reviewform" style="background-color:#5d7fa3; color:white">
                             Edit
                         </a>
                     </div>
 
                     <div class="collapse" id="reviewform">
-                        <form action="{% url 'changed:edit_comment_prof' business_pid=review.business.business_pid comment_id=review.id %}" ,
-                              method="post">
+                        <form
+                            action="{% url 'changed:edit_comment_prof' business_pid=review.business.business_pid comment_id=review.id %}"
+                            , method="post">
                             {% csrf_token %}
                             <div class="form-control">
                                 <div class="fieldWrapper">
@@ -108,8 +109,7 @@
                                     {{ editForm.body.label_tag }}<br />
                                     {{ editForm.body }}
                                 </div> <br />
-                                <button type="submit" , value="submit" ,
-                                        class="btn btn-secondary">
+                                <button type="submit" , value="submit" , class="btn btn-secondary">
                                     Submit
                                 </button>
                             </div>
@@ -122,7 +122,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 {% endblock %}
