--- a/changed/templates/changed/login.html
+++ b/changed/templates/changed/login.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="form-group" style="margin-top:1vh; margin-bottom:1vh;">
                         <label for="password">Password:</label>
-                        <input type="password" , id="password" , name="password">
+                        <input type="password" , id="password" , name="password", required = "true">
                     </div>
                     <div>
                         <button type="submit" value="Login" class="btn"
