--- a/changed/templates/changed/login.html
+++ b/changed/templates/changed/login.html
@@ -26,7 +26,7 @@
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="username">Username:</label>
-                        <input type="text" , id="username" , name="username">
+                        <input type="text" , id="username" , name="username", required = "true">
                     </div>
                     <div class="form-group" style="margin-top:1vh; margin-bottom:1vh;">
                         <label for="password">Password:</label>
