made username field required for sign up form

--- a/changed/templates/changed/signup.html
+++ b/changed/templates/changed/signup.html
@@ -28,7 +28,7 @@
                         {% csrf_token %}
                         <div class="form-group">
                             <label for=" username">Username:</label>
-                            <input type="text" , id="username" , name="username">
+                            <input type="text" , id="username" , name="username", required = "true">
                         </div>
                         <div class="form-group" style="margin-top:1vh; margin-bottom:1vh;">
                             <label for="password">Password:</label>
