--- a/changed/templates/changed/signup.html
+++ b/changed/templates/changed/signup.html
@@ -32,7 +32,7 @@
                         </div>
                         <div class="form-group" style="margin-top:1vh; margin-bottom:1vh;">
                             <label for="password">Password:</label>
-                            <input type="text" , id="password" , name="password">
+                            <input type="text" , id="password" , name="password", required = "true">
                         </div>
                         <div>
                             <button type="submit" value="Signup" class="btn"
