removed image on about

--- a/changed/templates/changed/about.html
+++ b/changed/templates/changed/about.html
@@ -39,7 +39,7 @@
         </p>
     </div>
     <div class="text-center">
-        <img src="https://live.staticflickr.com/65535/51112523640_592d56bfbf_c.jpg" class="rounded" alt="..."
+        <img src="" class="rounded" alt="..."
             style="margin:1vh; margin-bottom:60px">
     </div>
     </div>
