added a new, more aesthetic image to about page

--- a/changed/templates/changed/about.html
+++ b/changed/templates/changed/about.html
@@ -39,7 +39,7 @@
         </p>
     </div>
     <div class="text-center">
-        <img src="" class="rounded" alt="..."
+        <img src="https://www.traveller.com.au/content/dam/images/h/1/h/9/4/9/image.related.articleLeadwide.620x349.h1e67c.png/1568355596131.jpg" class="rounded" alt="..."
             style="margin:1vh; margin-bottom:60px">
     </div>
     </div>
