updated formatting of about.html

--- a/changed/templates/changed/about.html
+++ b/changed/templates/changed/about.html
@@ -10,13 +10,14 @@
 <body>
     <h2 class="d-flex justify-content-center" style="margin-top:2vh">About "What's Changed?"</h2>
     <div class=container style="width:80vw">
-        <p>
+       <p>
             Like many places, the COVID-19 pandemic has had an immense impact on the local community of Charlottesville,
             VA.
             What's Changed was created to track and understand the changes that COVID-19 has inflicted onto businesses
             in
             the
-            area. Serving as a one stop shop for understanding everything COVID-related to a business. This includes
+            area. 
+            <p>Serving as a one stop shop for understanding everything COVID-related to a business. This includes
             information
             regarding outdoor seating, COVID protocol ratings, maximum capacity, etc. In addition, users can submit
             their
@@ -25,6 +26,8 @@
             with
             one another to support one another. Use What's Changed to do your part and help your local community.
         </p>
+        </p>
+
 
         <p>
             What's Changed is a work programmed by five University of Virginia Students for a CS 3240 project. These
