--- a/changed/templates/changed/about.html
+++ b/changed/templates/changed/about.html
@@ -11,8 +11,8 @@
     <h2 class="d-flex justify-content-center" style="margin-top:2vh">About "What's Changed?"</h2>
     <div class=container style="width:80vw">
        <p>
-            Like many places, the COVID-19 pandemic has had an immense impact on the local community of Charlottesville,
-            VA.
+            Like most places, the COVID-19 pandemic has had an immense impact on the local community of Charlottesville,
+            Virginia.
             What's Changed was created to track and understand the changes that COVID-19 has inflicted onto businesses
             in
             the
