edits to text of about.html

--- a/changed/templates/changed/about.html
+++ b/changed/templates/changed/about.html
@@ -17,12 +17,12 @@
             in
             the
             area. 
-            <p>Serving as a one stop shop for understanding everything COVID-related to a business. This includes
+            <p>What's Changed intends to serve as a one stop shop for understanding everything COVID-related to a business. This includes
             information
             regarding outdoor seating, COVID protocol ratings, maximum capacity, etc. In addition, users can submit
             their
             own
-            reviews and commentary regarding certain businesses. Now more than ever, local communities must be connected
+            reviews and commentary regarding certain businesses' covid protocal. Now more than ever, local communities must be connected
             with
             one another to support one another. Use What's Changed to do your part and help your local community.
         </p>
