final change to about.html

--- a/changed/templates/changed/about.html
+++ b/changed/templates/changed/about.html
@@ -10,7 +10,7 @@
 <body>
     <h2 class="d-flex justify-content-center" style="margin-top:2vh">About "What's Changed?"</h2>
     <div class=container style="width:80vw">
-       <p>
+        <p>
             Like most places, the COVID-19 pandemic has had an immense impact on the local community of Charlottesville,
             Virginia.
             What's Changed was created to track and understand the changes that COVID-19 has inflicted onto businesses
@@ -22,12 +22,13 @@
             regarding outdoor seating, COVID protocol ratings, maximum capacity, etc. In addition, users can submit
             their
             own
-            reviews and commentary regarding certain businesses' covid protocal. Now more than ever, local communities must be connected
+            reviews and commentary regarding certain businesses' covid protocal. 
+            <p>Now more than ever, local communities must be connected
             with
             one another to support one another. Use What's Changed to do your part and help your local community.
         </p>
         </p>
-
+    </p>
 
         <p>
             What's Changed is a work programmed by five University of Virginia Students for a CS 3240 project. These
